--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,13 @@
+/* Universal Selector*/
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/*Element Selectors*/
+
+/** Body Element Styling **/
 body {
     background-color: #d9dcd6;
 }
@@ -15,6 +19,7 @@ body {
     color: #ffffff;
 }
 
+/** Header Element Styling **/
 .header h1 {
     display: inline-block;
     font-size: 48px;
@@ -59,6 +64,7 @@ p {
     background-position: center;
 }
 
+/** Img Element Styling **/
 .float-left {
     float: left;
     margin-right: 25px;
@@ -75,6 +81,7 @@ p {
     margin-left: 20px;
 }
 
+/** Benefits **/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -134,6 +141,8 @@ p {
     max-width: 150px;
 }
 
+
+/** Main Styling **/
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -187,7 +196,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/** Footer Element Styling **/
 .footer {
     padding: 30px;
     clear: both;
